--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@formatjs/intl-localematcher": "^0.2.32",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
+    "@plasmohq/messaging": "^0.6.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
@@ -25,16 +26,17 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^1.2.1",
     "eslint": "8.41.0",
-    "eslint-config-next": "13.4.3",
+    "eslint-config-next": "^14.2.3",
     "lucide-react": "^0.224.0",
     "negotiator": "^0.6.3",
-    "next": "^13.4.4",
+    "next": "^14.2.3",
     "next-themes": "^0.2.1",
     "postcss": "8.4.23",
-    "posthog-js": "^1.57.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "posthog-js": "^1.131.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.4",
+    "react-icons": "^5.2.1",
     "react-lottie": "^1.2.4",
     "server-only": "^0.0.1",
     "tailwind-merge": "^1.14.0",
