--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.2.1",
@@ -26,6 +27,7 @@
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^1.2.1",
+    "cmdk": "^1.0.0",
     "eslint": "8.41.0",
     "eslint-config-next": "^14.2.3",
     "lucide-react": "^0.224.0",
@@ -38,8 +40,9 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.2.1",
-    "react-lottie": "^1.2.4",
+    "react-virtuoso": "^4.7.10",
     "server-only": "^0.0.1",
+    "signals-react-safe": "^1.1.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
