--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@next/mdx": "^14.2.3",
     "@next/third-parties": "^14.2.3",
     "@plasmohq/messaging": "^0.6.2",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
