--- a/package.json
+++ b/package.json
@@ -45,12 +45,12 @@
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.2.1",
     "postcss": "8.4.23",
-    "posthog-js": "^1.138.1",
+    "posthog-js": "^1.165.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.2.1",
-    "react-virtuoso": "^4.7.10",
+    "react-virtuoso": "^4.10.4",
     "server-only": "^0.0.1",
     "signals-react-safe": "^1.1.2",
     "tailwind-merge": "^1.14.0",
@@ -61,6 +61,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@iconify-icon/react": "^2.1.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/typography": "^0.5.13",
     "@types/negotiator": "^0.6.1",
